--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
  <!-- font awesome -->
  <link rel="stylesheet" href="css/all.css">
- <title>YUG'S TODO LIST</h1></title>
+ <title>YUG'S TODO LIST</title>
  <style>
  </style>
 </head>
